fix: add missing "tag"

--- a/.github/workflows/mingine.yml
+++ b/.github/workflows/mingine.yml
@@ -22,6 +22,6 @@ jobs:
       env:
         CI: true
     - name: mingine
-      uses: cutenode/action-mingine
+      uses: cutenode/action-mingine@master
       with:
         path: './'
