chore: minor tweak to re-run Actions

--- a/.github/workflows/mingine.yml
+++ b/.github/workflows/mingine.yml
@@ -20,7 +20,7 @@ jobs:
         npm install
       env:
         CI: true
-    - name: mingine
+    - name: Use mingine
       uses: cutenode/action-mingine@master
       with:
         path: './'
