--- a/.github/workflows/mingine.yml
+++ b/.github/workflows/mingine.yml
@@ -16,8 +16,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install
-      run: |
-        npm install
+      run: npm install
       env:
         CI: true
     - name: Run mingine
