--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "engines": {
+    "node": "12.0.0"
+  }
   "author": "Tierney Cyren <hello@bnb.im>",
   "license": "MIT"
 }
